paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_1/sample_004/target.compile.log
error[E0599]: no method named `try_into` found for slice `[u8]` in the current scope
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_1/sample_004/target.rs:12:44
    |
 12 |         i32::from_le_bytes(self.data[0..4].try_into().unwrap())
    |                                            ^^^^^^^^
    |
   ::: /Users/arielkellison/.rustup/toolchains/nightly-2025-09-10-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/convert/mod.rs:622:8
    |
622 |     fn try_into(self) -> Result<T, Self::Error>;
    |        -------- the method is available for `[u8]` here
    |
    = help: items from traits can only be used if the trait is in scope
    = note: 'std::convert::TryInto' is included in the prelude starting in Edition 2021
help: trait `TryInto` which provides `try_into` is implemented but not in scope; perhaps you want to import it
    |
  1 + use std::convert::TryInto;
    |
help: there is a method `into` with a similar name
    |
 12 -         i32::from_le_bytes(self.data[0..4].try_into().unwrap())
 12 +         i32::from_le_bytes(self.data[0..4].into().unwrap())
    |

error[E0599]: no method named `try_into` found for slice `[u8]` in the current scope
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/structure_and_union_spec_1/sample_004/target.rs:20:44
    |
 20 |         i64::from_le_bytes(self.data[0..8].try_into().unwrap())
    |                                            ^^^^^^^^
    |
   ::: /Users/arielkellison/.rustup/toolchains/nightly-2025-09-10-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/convert/mod.rs:622:8
    |
622 |     fn try_into(self) -> Result<T, Self::Error>;
    |        -------- the method is available for `[u8]` here
    |
    = help: items from traits can only be used if the trait is in scope
    = note: 'std::convert::TryInto' is included in the prelude starting in Edition 2021
help: trait `TryInto` which provides `try_into` is implemented but not in scope; perhaps you want to import it
    |
  1 + use std::convert::TryInto;
    |
help: there is a method `into` with a similar name
    |
 20 -         i64::from_le_bytes(self.data[0..8].try_into().unwrap())
 20 +         i64::from_le_bytes(self.data[0..8].into().unwrap())
    |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0599`.